# piper-robot-server

./: .dockerignore  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  Makefile  README.md  README_UNIFIED.md  README_VR_TELEOP.md  REFERENCE_POSES.md  SERVER-SETUP.md  SIMULATION.md  SSL-DEPLOYMENT.md  SSL-SETUP.md  app.js  bootstrap-server.sh  can_config.sh  config.yaml  controller_server.py  debug_lerobot_angles.py  deploy-setup.sh  development.env  docker-compose.override.yml  docker-compose.ssl.yml  docker-compose.yml  environment.yml  find_cameras.py  find_limits.py  forward_kinematics.py  index.html  interface.js  inverse_kinematics.py  investigate.py  keyboard_teleop.py  lerobot_keyboard_ik.py  limits.json  plan.md  pose_calibration.py  production.env  pyproject.toml  read_motor_params.py  (+17 more)
.cursor/rules/: conda.mdc
URDF/Piper/: dual_piper.urdf  piper_description.urdf  visualize_robot.py
URDF/SO100_NEW/: so100.urdf
URDF/SO_5DOF_ARM100_8j/urdf/: so100.urdf
URDF/yam/: dual_yam.urdf
calibration/: lerobot_moves.py  main_follower.json  main_leader.json
camera-streaming/: auth.py  camera_streamer.py
camera_streaming/: auth.py  camera_streamer.py  camlist.py  room_manager.py  run_streaming.py  streamer.py  video_streamer.py
camera_streaming/calibration/: stereo_calibration_vr_20250804_052134.pkl
deployment/: DEPLOYMENT.md  nginx-tactile-teleop.conf  nginx-tactile-teleop.conf.template  tactile-teleop.service  tactile-teleop.service.template
docker/: Dockerfile  README.md  docker-entrypoint.py  fastapi.dockerfile  nginx.dockerfile
docker/config/: nginx.conf  nginx.conf.template
docker/scripts/: check-ssl.sh  configure-nginx-docker.sh  configure-nginx.sh  create-deployment-package.sh  docker-build.sh  nginx-docker-entrypoint.sh  setup-letsencrypt.sh
scripts/: convert_images_to_video.py  replay_episode.py  run_lerobot_policy.py  upload_to_huggingface.py
src/lerobot_robot_piper/: __init__.py  lerobot_piper.py
src/piper_teleop/: config.py  find_cameras.py  livekit_auth.py  utils.py
src/piper_teleop/policy_bridge/: __init__.py  __main__.py  camera.py  config.py  mock_policy_server.py  policy_loop.py  robot.py  visualizer.py
src/piper_teleop/robot_server/: __main__.py  can_config.sh  control_loop.py  keyboard_controller.py  lerobot_policy.py  main.py  recorder.py  recorder_utils.py  robot_leader.py
src/piper_teleop/web_server/: __main__.py  main.py
src/tactile_teleop/: config.py  config.yaml  livekit_auth.py  utils.py
src/tactile_teleop/core/: kinematics.py  piper.py  piper_sdk_interface.py  robot_interface.py
src/tactile_teleop/inputs/: vr_controllers.py
src/tactile_teleop/robot_server/: __main__.py  can_config.sh  (+2 more)
telegrip/: __init__.py  __main__.py  config.py  control_loop.py  livekit_auth.py  main.py  utils.py  vr_async_test.py
telegrip/core/: __init__.py  geometry.py  kinematics.py  piper.py  piper_sdk_interface.py  robot_interface.py  visualizer.py
telegrip/inputs/: __init__.py  base.py  keyboard_listener.py  vr_controllers.py  vr_ws_server.py
telegrip/robot_server/: __main__.py  main.py
telegrip/web_server/: __main__.py  main.py
teleop/: __init__.py  __main__.py  config.py  control_loop.py  main.py
teleop/core/: kinematics.py  robot_interface.py  visualizer.py
teleop/inputs/: __init__.py  base.py  keyboard_listener.py  vr_ws_server.py
tests/: test_leader_setup.py  test_lerobot_dataset_logic.py  test_lerobot_policy.py  test_shared_camera_data.py
web-ui/: controllers.js  index.html  interface.js  livekit-utils.js  video-example.html  video-stream.js  vr_app.js
webapp/: app.js  index.html
(+60 files in other folders)
